<resources>
    <string name="app_name">Linear Regression Solver</string>
    <string name="text1">No deberías ver esto</string>
    <string name="confidence">Porcentaje de Confianza:</string>
    <string name="mean">I.C. Respuesta Media</string>
    <string name="predict">I.C. Predicción</string>
    <string name="solve">Resolver</string>
    <string name="reg">Modelo de Regresión</string>
    <string name="given">Dado</string>
    <string name="signific">Significancia General\n(F<sub><small>o</small></sub> &#60; &#x2044; &#62; &#402;<sub><small>&#945;, 2, n-3</small></sub>)</string>
    <string name="ic1">I.C. Variables</string>
    <string name="ic2">I.C. Respuesta</string>
    <string name="ic3">I.C. Predicción</string>
    <string name="calc">Calc</string>
    <string name="varsigni1">Variable 1 (X<sub><small>1</small></sub>)\n(T<sub><small>o</small></sub> &#60; &#x2044; &#62; &#964;<sub><small>&#945;&#x2044;2, n-3</small></sub>)</string>
    <string name="varsigni2">Variable 2 (X<sub><small>2</small></sub>)\n(T<sub><small>o</small></sub> &#60; &#x2044; &#62; &#964;<sub><small>&#945;&#x2044;2, n-3</small></sub>)</string>
    <string name="coef">Coeficiente\nDeterminación</string>
    <string name="resid">Residuales</string>
    <string name="graf">Gráficas</string>
    <string name="saveswitch">Guardar</string>
    <string name="loadswitch">Cargar</string>
    <string name="delete">Eliminar</string>
    <string name="varpobl">Varianza\nPoblacional (&#963;<sup><small>2</small></sup>)</string>
    <string name="errstd1">Error Estándar\nse(B<sub><small>0</small></sub>)</string>
    <string name="errstd2">Error Estándar\nse(B<sub><small>1</small></sub>)</string>
    <string name="signifone">Significancia\n(T<sub><small>o</small></sub> &#60; &#x2044; &#62; &#964;<sub><small>&#945;&#x2044;2, n-2</small></sub>)</string>
    <string name="icb1">I.C. (B<sub><small>0</small></sub>)</string>
    <string name="icb2">I.C. (B<sub><small>1</small></sub>)</string>
    <string name="x1">X<sub><small>1</small></sub></string>
    <string name="x2">X<sub><small>2</small></sub></string>
    <string name="icb3">I.C. (B<sub><small>2</small></sub>)</string>
    <string name="confalert">Introduce un valor entre 1–100.</string>
    <string name="yres">y (datos)</string>
    <string name="yres1">y (modelo)</string>
    <string name="residual">Residual</string>
    <string name="graphmulti">Dispersión (Valores Ajustados vs Reales)</string>
    <string name="graphlin">Dispersión (Valores Ajustados vs Reales)</string>
    <string name="fittedv2">Ajustado</string>
    <string name="actualv2">Real</string>
    <string name="ordinaryres">Residuales Ordinarios</string>
    <string name="fitvalue">Valor Ajustado (&#375;)</string>
    <string name="stdrestv">Residual Estandarizado</string>
    <string name="stdres">Residuales Estandarizados</string>
    <string name="cooktv">Distancia de Cook</string>
    <string name="cook">Distancias de Cook</string>
    <string name="obs">Observación</string>
    <string name="anova">ANOVA</string>
    <string name="anovatable">Tabla ANOVA</string>
    <string name="fv">F.V.</string>
    <string name="sc">S.C.</string>
    <string name="gl">G.L.</string>
    <string name="mc">C.M.</string>
    <string name="anovainfo">F.V. = Fuente de Variación; S.C. = Suma de Cuadrados;\nG.L. = Grados de Libertad; C.M. = Cuadrados Medios;\nR = Regresión; E = Error; T = Total</string>
    <string name="fisherval">Valor de Fisher (tablas)</string>
    <string name="warntitle">Advertencia</string>
    <string name="warntext">¿Deseas eliminar toda la información introducida?</string>
    <string name="positivebtn">Sí, elimínala</string>
    <string name="negativebtn">No</string>
    <string name="tvsave">Inserta texto…</string>
    <string name="menu1">Regresión Lineal</string>
    <string name="menu2">Diseño de Experimentos</string>
    <string name="tratamientos">Tratamientos\n(a<sub><small>i</small></sub>):</string>
    <string name="replicas">Réplicas:</string>
    <string name="doeunif">Diseño de Experimentos\nUnifactorial</string>
    <string name="anovainfoDOE">F.V. = Fuente de Variación; S.C. = Suma de Cuadrados;\nG.L. = Grados de Libertad; C.M. = Cuadrados Medios;\nTR = Tratamientos; E = Error; T = Total</string>
    <string name="ictreat">I.C. de Tratamientos</string>
    <string name="doeequation">Ecuación</string>
    <string name="icmeandif">I.C. Diferencia de Tratamientos Promedio</string>
    <string name="sel_treat">Selecciona tratamientos a comparar:</string>
    <string name="sel">Seleccionar…</string>
    <string name="icmeandifTEMP">0 &#8804; &#956;<sub><small> x </small></sub> - &#956;<sub><small> y </small></sub> &#8804; 0</string>
    <string name="seltitle">Selecciona un tratamiento</string>
    <string name="cancelkey">Cancelar</string>
    <string name="responsetv">Respuesta</string>
    <string name="trattvg">Tratamientos</string>
    <string name="avgtreat">Promedio por Tratamiento</string>
    <string name="granavg">Gran Promedio</string>
    <string name="doeplot1tv">Respuesta Media &amp;\nI.C. por Tratamiento</string>
    <string name="doeplot2tv">Respuesta Media</string>
    <string name="doeplot3tv">Respuesta por Tratamiento</string>
</resources>