<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/roundbutton"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".graphx">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="249dp"
        android:layout_height="37dp"
        android:layout_marginTop="30dp"
        android:text="@string/graf"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutgraphbuttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="300"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3">

        <LinearLayout
            android:id="@+id/lb1"
            android:layout_width="0dp"
            android:padding="10dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:orientation="vertical">

            <Button
                android:id="@+id/graph1"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textSize="10sp"
                android:text="@string/graphmulti">
            </Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lb2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:layout_weight="100"
            android:orientation="vertical">

            <Button
                android:id="@+id/graph2"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textSize="11sp"
                android:text="@string/ordinaryres">
            </Button>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lb3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:layout_weight="100"
            android:orientation="vertical">

            <Button
                android:id="@+id/graph3"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textSize="12sp"
                android:text="3">
            </Button>
        </LinearLayout>



    </LinearLayout>



        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/mf1"
            android:layout_width="350dp"
            android:layout_height="400dp"
            app:layout_constraintTop_toBottomOf="@id/layoutgraphbuttons"
            android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/fittedv2"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:gravity="top|center"
        android:rotation="270"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="0dp"
        app:layout_constraintTop_toBottomOf="@id/layoutgraphbuttons"
        android:layout_marginTop="260dp"
        android:text="@string/actualv2" />


    <TextView
        android:id="@+id/actualv2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/mf1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="165dp"
        android:text="@string/fittedv2"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/mf2"
        android:layout_width="350dp"
        android:layout_height="400dp"
        app:layout_constraintTop_toBottomOf="@id/layoutgraphbuttons"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/residual"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:gravity="top|center"
        android:rotation="270"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="0dp"
        app:layout_constraintTop_toBottomOf="@id/layoutgraphbuttons"
        android:layout_marginTop="260dp"
        android:text="@string/residual" />


    <TextView
        android:id="@+id/fitted"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/mf2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="110dp"
        android:text="@string/fitvalue"/>










</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>