<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/roundbutton"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:context=".graphxone">

        <TextView
            android:id="@+id/textView3one"
            android:layout_width="249dp"
            android:layout_height="37dp"
            android:layout_marginTop="30dp"
            android:text="@string/graf"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layoutgraphbuttonsone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:weightSum="200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView3one">

            <LinearLayout
                android:id="@+id/lb1one"
                android:layout_width="0dp"
                android:padding="8dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="100"
                android:orientation="vertical">

                <Button
                    android:id="@+id/graph1one"
                    android:layout_width="190dp"
                    android:layout_height="70dp"
                    android:textSize="11sp"
                    android:text="@string/graphlin">
                </Button>

                <Button
                    android:id="@+id/graph3one"
                    android:layout_width="190dp"
                    android:layout_height="70dp"
                    android:textSize="11sp"
                    android:text="@string/stdres">
                </Button>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lb2one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center"
                android:layout_weight="100"
                android:orientation="vertical">

                <Button
                    android:id="@+id/graph2one"
                    android:layout_width="190dp"
                    android:layout_height="70dp"
                    android:textSize="11sp"
                    android:text="@string/ordinaryres">
                </Button>

            </LinearLayout>



        </LinearLayout>



            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/mf1one"
                android:layout_width="350dp"
                android:layout_height="400dp"
                app:layout_constraintTop_toBottomOf="@id/layoutgraphbuttonsone"
                android:layout_marginTop="100dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/fittedv2one"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:gravity="top|center"
            android:rotation="270"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="0dp"
            app:layout_constraintTop_toBottomOf="@id/layoutgraphbuttonsone"
            android:layout_marginTop="260dp"
            android:text="Y" />


        <TextView
            android:id="@+id/actualv2one"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/mf1one"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="165dp"
            android:text="X"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/mf2one"
            android:layout_width="350dp"
            android:layout_height="400dp"
            app:layout_constraintTop_toBottomOf="@id/layoutgraphbuttonsone"
            android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/residualone"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:gravity="top|center"
            android:rotation="270"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="0dp"
            app:layout_constraintTop_toBottomOf="@id/layoutgraphbuttonsone"
            android:layout_marginTop="260dp"
            android:text="@string/residual" />


        <TextView
            android:id="@+id/fittedone"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/mf2one"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="110dp"
            android:text="@string/fitvalue"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/stdresgraphone"
            android:layout_width="350dp"
            android:layout_height="400dp"
            app:layout_constraintTop_toBottomOf="@id/layoutgraphbuttonsone"
            android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/residualstdone"
            android:layout_width="180dp"
            android:layout_height="160dp"
            android:gravity="top|center"
            android:rotation="270"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="0dp"
            app:layout_constraintTop_toBottomOf="@id/layoutgraphbuttonsone"
            android:layout_marginTop="220dp"
            android:text="@string/stdrestv" />


        <TextView
            android:id="@+id/fittedstdone"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/stdresgraphone"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="110dp"
            android:text="@string/fitvalue"/>







    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>