<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/roundbutton"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:context=".solvedone">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/regmodone"
            android:layout_width="85dp"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rect2"
            android:gravity="center"
            android:text="@string/reg"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:flow_verticalAlign="bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView2one"
            android:layout_width="280dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rect"
            android:gravity="center"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/regmodone"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/givenone"
            android:layout_width="50dp"
            android:layout_height="51dp"
            android:background="@drawable/rect2"
            android:layout_marginTop="84dp"
            android:gravity="center"
            android:text="@string/given"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:flow_verticalAlign="bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/meanone"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginTop="84dp"
            android:background="@drawable/rect"
            android:ems="10"
            android:hint="@string/x1"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/givenone"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button3one"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="84dp"
            android:text="@string/calc"
            android:onClick="eval"
            app:layout_constraintStart_toEndOf="@+id/meanone"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UsingOnClickInXml" />

        <TextView
            android:id="@+id/given2one"
            android:layout_width="120dp"
            android:layout_height="51dp"
            android:background="@drawable/rect"
            android:layout_marginStart="8dp"
            android:layout_marginTop="84dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="12sp"
            app:flow_verticalAlign="bottom"
            app:layout_constraintStart_toEndOf="@+id/button3one"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/regmod3one"
            android:layout_width="120dp"
            android:layout_height="51dp"
            android:layout_marginTop="151dp"
            android:background="@drawable/rect2"
            android:gravity="center"
            android:text="@string/varpobl"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:flow_verticalAlign="bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/given3one"
            android:layout_width="80dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="151dp"
            android:background="@drawable/rect"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="12sp"
            app:flow_verticalAlign="bottom"
            app:layout_constraintStart_toEndOf="@+id/regmod3one"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/regmod4one"
            android:layout_width="120dp"
            android:layout_height="51dp"
            android:layout_marginTop="218dp"
            android:background="@drawable/rect2"
            android:gravity="center"
            android:text="@string/errstd1"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:flow_verticalAlign="bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/given4one"
            android:layout_width="80dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="216dp"
            android:background="@drawable/rect"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="12sp"
            app:flow_verticalAlign="bottom"
            app:layout_constraintStart_toEndOf="@+id/regmod4one"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/regmod5one"
            android:layout_width="120dp"
            android:layout_height="51dp"
            android:layout_marginTop="285dp"
            android:background="@drawable/rect2"
            android:gravity="center"
            android:text="@string/errstd2"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:flow_verticalAlign="bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/given5one"
            android:layout_width="80dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="285dp"
            android:background="@drawable/rect"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="12sp"
            app:flow_verticalAlign="bottom"
            app:layout_constraintStart_toEndOf="@+id/regmod5one"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3one"
            android:layout_width="53dp"
            android:layout_height="49dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="352dp"
            app:layout_constraintStart_toEndOf="@+id/given6one"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/regmod6one"
            android:layout_width="120dp"
            android:layout_height="51dp"
            android:layout_marginTop="352dp"
            android:background="@drawable/rect2"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:flow_verticalAlign="bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/given6one"
            android:layout_width="180dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="352dp"
            android:background="@drawable/rect"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="12sp"
            app:flow_verticalAlign="bottom"
            app:layout_constraintStart_toEndOf="@+id/regmod6one"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/regmod7one"
            android:layout_width="120dp"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rect2"
            android:gravity="center"
            android:text="@string/icb1"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:flow_verticalAlign="bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regmod6one" />

        <TextView
            android:id="@+id/given9one"
            android:layout_width="230dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rect"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="12sp"
            app:flow_verticalAlign="bottom"
            app:layout_constraintStart_toEndOf="@+id/regmod7one"
            app:layout_constraintTop_toBottomOf="@+id/given6one" />

        <TextView
            android:id="@+id/regmod8one"
            android:layout_width="120dp"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rect2"
            android:gravity="center"
            android:text="@string/icb2"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:flow_verticalAlign="bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regmod7one" />

        <TextView
            android:id="@+id/given10one"
            android:layout_width="230dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rect"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="12sp"
            app:flow_verticalAlign="bottom"
            app:layout_constraintStart_toEndOf="@+id/regmod8one"
            app:layout_constraintTop_toBottomOf="@+id/given9one" />

        <TextView
            android:id="@+id/regmod10one"
            android:layout_width="120dp"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rect2"
            android:gravity="center"
            android:text="@string/ic2"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:flow_verticalAlign="bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regmod8one" />

        <TextView
            android:id="@+id/given11one"
            android:layout_width="230dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rect"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="12sp"
            app:flow_verticalAlign="bottom"
            app:layout_constraintStart_toEndOf="@+id/regmod10one"
            app:layout_constraintTop_toBottomOf="@+id/given10one" />

        <TextView
            android:id="@+id/regmod12one"
            android:layout_width="120dp"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rect2"
            android:gravity="center"
            android:text="@string/ic3"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:flow_verticalAlign="bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regmod10one" />

        <TextView
            android:id="@+id/given13one"
            android:layout_width="230dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rect"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="12sp"
            app:flow_verticalAlign="bottom"
            app:layout_constraintStart_toEndOf="@+id/regmod12one"
            app:layout_constraintTop_toBottomOf="@+id/given11one" />

        <TextView
            android:id="@+id/regmod13one"
            android:layout_width="120dp"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rect2"
            android:gravity="center"
            android:text="@string/coef"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:flow_verticalAlign="bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regmod12one" />

        <TextView
            android:id="@+id/given14one"
            android:layout_width="80dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rect"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="12sp"
            app:flow_verticalAlign="bottom"
            app:layout_constraintStart_toEndOf="@+id/regmod13one"
            app:layout_constraintTop_toBottomOf="@+id/given13one" />

        <Button
            android:id="@+id/button4one"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:onClick="residualesone"
            android:text="@string/resid"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button5one"
            app:layout_constraintTop_toBottomOf="@+id/regmod13one"
            android:layout_marginTop="20dp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/button5one"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="graphxone"
            android:text="@string/graf"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/button4one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regmod13one"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/anovabtnone"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:text="@string/anova"
            android:textSize="13sp"
            android:onClick="anovafone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regmod13one"
            tools:ignore="UsingOnClickInXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>